# finite-state-machine

./: Algorythm.txt  CMakeLists.txt  LongestPart.cpp  LongestPartTest.cpp  README.md  RegexTraitsTest.cpp  machineTest.cpp  main.cpp  tests.cpp
Machine/: CMakeLists.txt
Machine/src/: DetMachine.cpp  machine.cpp
RegexTraits/: CMakeLists.txt
RegexTraits/include/: RegexBinaryOperation.h  RegexLetter.h  RegexOperation.h  RegexTraits.h  RegexUnaryOperation.h  RegexVertex.h
RegexTraits/src/: RegexBinaryOperation.cpp  RegexLetter.cpp  RegexOperation.cpp  RegexTraits.cpp  RegexUnaryOperation.cpp  RegexVertex.cpp
include/: DetMachine.h  RegexTraits.h  machine.h  poland.h  suffix.h
src/: DetMachine.cpp  RegexTraits.cpp  machine.cpp  suffix.cpp
